# cyberpunkAgent

./: .env.example  .gitignore  Agent_赛博朋克2077_框架.md  Project_Trumen_深度探讨.md  docker-compose.yml  index.html  join_market.py  run_demo.py
CyberAgent/: 2.26讨论.html  2.26讨论.md  Agent_赛博朋克2077_世界观设定.html  Agent_赛博朋克2077_世界观设定.md  Agent_赛博朋克2077_技术路径.html  Agent_赛博朋克2077_技术路径.md  Agent_赛博朋克2077_框架.md  CyberAgent_技术路径_融合.md  Project_Roadmap_Index.md  Project_Roadmap_View.html  Project_Trumen_概念框架.md  Slice_01_AI画家交易市场.md  Slice_01_体验设计分析.html  Slice_01_体验设计分析.md  Slice_01_体验设计层.md  Trumen_Legos_技术结构路径.html  Trumen_Legos_技术结构路径.md  check_service.py  deploy_discussion.py  deploy_hub.py  deploy_slice01.py  deploy_tech_path.py  deploy_techpath.py  deploy_worldview.py  fix_firewall.py  index.html  index_hub.html  slice_01.html
Future/: Podcast_AI+_框架设计.md  Q1反思
backend/: Dockerfile  pyproject.toml
backend/src/cybermarket/: config.py  database.py  dependencies.py  main.py
backend/tests/: conftest.py  test_agents.py  test_artworks.py  test_auth.py  test_e2e.py  test_leaderboard.py  test_market.py  test_models.py  test_reputation.py  test_skills.py
docs/: CyberMarket_使用指南.md
docs/plans/: 2026-03-13-cybermarket-demo-design.md  2026-03-13-cybermarket-demo-plan.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
generationResult/: ip_with_skills_20260207_180543.json
openclaw-plugin/: pyproject.toml
openclaw-plugin/src/cybermarket_plugin/: __init__.py  agent_prompt.py  client.py  mcp_server.py  tools.py
openclaw-plugin/tests/: test_plugin.py
(+33 files in other folders)
